--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Author:       Kev Quirk
  Author URI:   https://kevq.uk
  Template:     generatepress
- Version:      1.2
+ Version:      2.0
 */
 
 /** Global colour variables **/
@@ -19,109 +19,13 @@
 
     /* Notice colours */
     --dark-red: #951818;
-
-    --serif-font: "Meta Serif", Georgia, "Times New Roman", serif;
-    --sans-font: "Fira Sans Condensed", Arial, sans-serif;
-    --mono-font: "Fira Mono", SFMono-Regular, Consolas, "Liberation Mono", Menlo, Courier, monospace;
  }
-
-/* Load custom fonts */
-
-/* fira-sans-condensed-regular - latin */
-@font-face {
-  font-family: 'Fira Sans Condensed';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local(''),
-       url('/wp-content/themes/generatepress_child/fonts/fira/fira-sans-condensed-v5-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/wp-content/themes/generatepress_child/fonts/fira/fira-sans-condensed-v5-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* fira-sans-condensed-italic - latin */
-@font-face {
-  font-family: 'Fira Sans Condensed';
-  font-style: italic;
-  font-weight: 400;
-  src: local(''),
-       url('/wp-content/themes/generatepress_child/fonts/fira/fira-sans-condensed-v5-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/wp-content/themes/generatepress_child/fonts/fira/fira-sans-condensed-v5-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* fira-sans-condensed-600 - latin */
-@font-face {
-  font-family: 'Fira Sans Condensed';
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: local(''),
-       url('/wp-content/themes/generatepress_child/fonts/fira/fira-sans-condensed-v5-latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/wp-content/themes/generatepress_child/fonts/fira/fira-sans-condensed-v5-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* fira-sans-condensed-600italic - latin */
-@font-face {
-  font-family: 'Fira Sans Condensed';
-  font-style: italic;
-  font-weight: 600;
-  src: local(''),
-       url('/wp-content/themes/generatepress_child/fonts/fira/fira-sans-condensed-v5-latin-600italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/wp-content/themes/generatepress_child/fonts/fira/fira-sans-condensed-v5-latin-600italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-@font-face {
-  font-family: 'Fira Mono';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local(''),
-       url('/wp-content/themes/generatepress_child/fonts/fira/mono/fira-mono.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/wp-content/themes/generatepress_child/fonts/fira/mono/fira-mono.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/**** META SERIF FONT ****/
-@font-face {
-  font-family: 'Meta Serif';
-  font-style: normal;
-  font-display: swap;
-  src: local(''),
-      url('/wp-content/themes/generatepress_child/fonts/meta-serif/book.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/wp-content/themes/generatepress_child/fonts/meta-serif/book.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-@font-face {
-  font-family: 'Meta Serif';
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: local(''),
-      url('/wp-content/themes/generatepress_child/fonts/meta-serif/bold.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/wp-content/themes/generatepress_child/fonts/meta-serif/bold.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
 
 html {
   scroll-behavior: smooth;
 }
 
-body,
-.subscribe-form input {
-  font-family: var(--sans-font);
-}
-
-/* Centre homepage avatar */
-.site-avatar {
-  margin: 0 auto;
-  display: block;
-	padding-bottom: 50px;
-  height: 11rem;
-  border: none !important;
-}
-
 /* Layout changes & fixes */
-.page-header {
-    padding-bottom: 0 !important;
-}
-
 .main-navigation {
   border-top: 3px solid var(--dark);
   border-bottom: 3px solid var(--dark);
@@ -150,54 +54,14 @@ body,
 }
 
 /* Fix Button links */
-.gb-button-wrapper a:hover {
-  text-decoration: none !important;
-}
-
+.gb-button-wrapper a:hover,
 .wp-block-button__link,
 .button {
   text-decoration: none !important;
 }
 
-.intro {
-  line-height: 1.3;
-}
-
-.archive-title {
-  margin-top: 50px;
-}
-
-/* Blog list hover effect */
-h2.gb-headline-074e1a3b a {
-  font-size: 36px;
-  background: var(--dark);
-  color: var(--light) !important;
-  font-weight: bold;
-  padding: .5rem 1rem;
-  transition: .25s .1s ease-in-out;
-  display: inline-block;
-}
-
-h2.gb-headline-074e1a3b a:hover {
-  -webkit-transform: rotate(5deg);
-  -moz-transform: rotate(5deg);
-  -o-transform: rotate(5deg);
-  -ms-transform: rotate(5deg);
-  transform: rotate(5deg);
-}
-
-.main-title a {
-  padding: 0 .5rem;
-}
-
-.main-title a:hover {
-  background: var(--light) !important;
-  color: var(--dark) !important;
-}
-
 /* TL;DR Block */
 .tldr {
-  font-family: var(--serif-font);
   font-size: 1.6rem;
   border-top: 2px solid var(--accent-bg);
   border-bottom: 2px solid var(--accent-bg);
@@ -213,7 +77,6 @@ h2.gb-headline-074e1a3b a:hover {
   position: relative;
   font-size: 2rem;
   line-height: 1;
-  font-family: var(--sans-font);
   top: -2.5rem;
   background: var(--light);
   margin: 0 auto;
@@ -277,20 +140,8 @@ blockquote {
   border-color: var(--mid);
 }
 
-.wp-block-quote p,
-.wp-block-quote.is-large p,
-.wp-block-quote.is-style-large p {
-  font-size: 1.5rem;
-  font-family: var(--serif-font);
-}
-
-.wp-block-quote.is-style-large {
-  font-size: 1.3rem;
-}
-
 cite {
   font-size: 1rem !important;
-  font-family: var(--sans-font);
   font-style: normal;
   color: var(--dark);
 }
@@ -302,24 +153,6 @@ cite {
 
 .small {
   font-size: 1rem;
-}
-
-.favourites a {
-  font-size: 1.25em;
-}
-
-.nav-links {
-  font-size: 1.4rem;
-  font-weight: bold;
-  text-align: center;
-  color: var(--dark);
-  border-top: 3px solid var(--dark);
-  padding: 2rem 0;
-  border-bottom: 3px solid var(--dark);
-}
-
-.nav-links a {
-  color: var(--dark);
 }
 
 .page-numbers.current,
@@ -350,9 +183,7 @@ figcaption em {
 }
 
 /* Hide certain elements that can't be done on the block editor */
-.entry-meta, /* date on blog posts (replaced by custom element) */
-.post-type-archive-notes .page-title /* title on notes page */
-{
+.entry-meta, /* date on blog posts (replaced by custom element) */ {
   display: none;
 }
 
@@ -366,7 +197,6 @@ input.search-field {
 
 /* Format code and pre blocks */
 code, kbd, tt, var {
-  font-family: var(--mono-font);
   font-size: 1.1rem;
   color: var(--dark);
   background: #EFEFEF;
@@ -386,19 +216,13 @@ pre code {
 }
 
 .wp-block-code code {
-  white-space: pre !important;
+  white-space: pre;
 }
 
 /* Fix enlightener plugin blocks */
 .EnlighterJSRAW {
   color: var(--dark);
-  font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
   font-size: .75em;
-}
-
-/* Fix button border radius */
-.wp-block-button__link {
-  border-radius: 0;
 }
 
 .wp-block-search .wp-block-search__button,
@@ -412,17 +236,6 @@ pre code {
 #wpforms-submit-5567:hover {
   background: var(--mid);
   border-color: var(--mid);
-}
-
-/* Font size in forms */
-.wpforms-field-container input,
-.wpforms-field-container textarea {
-  font-size: 18px !important;
-}
-
-/* Fix social link margin on contact page */
-.wp-block-social-links.aligncenter.has-large-icon-size.has-icon-color.is-style-logos-only {
-  margin-bottom: 1rem;
 }
 
 /* Format the footer */
@@ -554,11 +367,6 @@ th {
 /* Select all on public key */
 .select-all {
 	user-select: all;
-}
-
-/* Remove border-radius on to top button */
-.generate-back-to-top {
-  border-radius: 0;
 }
 
 .wp-block-separator.is-style-dots {
