Added workflow and changed theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- Theme Name:   GeneratePress Child
+ Theme Name:   KQ 2022
  Theme URI:    https://generatepress.com
  Description:  Kev Quirk's GeneratePress child theme
  Author:       Kev Quirk
