--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ html {
 }
 
 /* Typography */
+h1,h2,h3,h4,h5,h6 {
+  letter-spacing: -0.0415625em;
+  font-weight: 900;
+}
+
 #page h2,
 #page h3 {
   margin-top: 4rem;
