--- a/style.css
+++ b/style.css
@@ -50,8 +50,7 @@ html {
 }
 
 /* Typography */
-h1,h2,h3,h4,h5,h6,
-h2.gb-headline-074e1a3b {
+h1,h2,h3,h4,h5,h6 {
   letter-spacing: -0.0415625em;
   font-weight: 900;
 }
